# ismrmrdviewer

./: .gitignore  README.md  pyproject.toml
ismrmrdviewer/: __main__.py
ismrmrdviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ismrmrdviewer/ui/: FileWidget.py  MainWindow.py
ismrmrdviewer/viewer/: AcquisitionViewer.py  HeaderViewer.py  ImageViewer.py  WaveformViewer.py
