[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ismrmrdviewer"
version = "0.2.1"
description = "Simple tool for viewing ISMRMRD data."
authors = [
    {name = "Kristoffer Langeland Knudsen", email = "kristofferlknudsen@gradientsoftware.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "ismrmrd>=1.12",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "PySide6>=6.5",
]

[project.gui-scripts]
ismrmrdviewer = "ismrmrdviewer.__main__:main"

[project.urls]
Homepage = "https://github.com/LouisJalouzot/ismrmrdviewer"
Repository = "https://github.com/LouisJalouzot/ismrmrdviewer"

[tool.setuptools.packages.find]
where = ["."]
include = ["ismrmrdviewer*"]